@@ -58,7 +58,7 @@
   C_STYL_noactions = ( "{" [^}]+ "}" ) ;
   A_noactions = ( ( A_HLGN_noactions | A_VLGN_noactions )* ) ;
   C_noactions = ( C_CLAS_noactions | C_STYL_noactions | C_LNGE_noactions )* ;
-  
+  C_noquotes_noactions = C_noactions -- '"' ;
 
   # text blocks
   trailing = PUNCT - ("'" | '"') ;
